--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
+URL: https://github.com/romero61/themeromero
+BugReports: https://github.com/romero61/themeromero/issues
